# bugred_cicd

./: .env  .gitignore  Dockerfile  READ.md  README.md  conftest.py  docker-compose.yml  main.py  pyproject.toml
allure-results/: 00553f36-8193-4d2d-84f4-0806a5398d22-result.json  0487b418-4b2f-4e17-bab6-5878c6afd275-container.json  102eca57-7242-4e16-bae8-6669b744af1b-container.json  11095b68-1e41-444e-9a41-551a175ffa83-container.json  11bc522f-5357-4cb7-8a8e-276999482aff-result.json  150b1044-aac9-4cca-8b74-f0a2f7719813-container.json  15c365b9-950d-4c9b-9ab6-e0370cbbc7c3-container.json  1f4c4f2e-21db-41b8-9b7d-c8a22d72b645-container.json  21352b00-3e3f-403c-9acc-8e4bb03730ca-container.json  23d3ed9b-66f9-4893-8b5f-b64fe4b7a1dc-result.json  2c23eace-93e2-47dd-b25b-ac0c1ba6ff16-container.json  2fc10033-af79-454b-8714-85367bf9933c-result.json  37e6a0f5-24fb-4a0f-8239-96b62bd8dcfa-container.json  4bcf59c0-af26-481a-80d4-58de52bc7b34-container.json  4c4d36fe-bff1-4bf9-a61a-380d5cf788c0-container.json  516e3266-5a52-4cc7-9f80-2aa8f29d210f-container.json  52a429b8-5a52-46d9-91a6-7a9e0436d78a-container.json  5724e54b-1a8d-484b-96a0-15567356bbdd-container.json  669600b0-8b6b-466f-9a64-9e3a9fd22e87-result.json  67d83af1-6c2e-459f-98de-b4879a6548b7-result.json  6aa98379-3812-4b9c-8bfc-bb6e50227d8d-result.json  6e3c46eb-ff82-47d6-9796-5ad62a6f635d-result.json  6f64e638-81f3-4509-9f09-f555cdef07a3-container.json  7da89401-9843-4f83-a843-79cc246515bf-container.json  7e12a315-746d-44a2-af7e-02c7a9ae9a3d-container.json  87d0cb98-fcfd-464e-9c65-ce67be975b14-result.json  (+28 more)
config/: data.py  (+1 more)
(+71 files in other folders)
